# Think-with-your-hands-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  chat_client  mycalc_test
.devcontainer/: Dockerfile  devcontainer.json  supervisord.conf
sample-src/apx1/: i64_i32_err.rs  i64_i32_fix.rs  int_to_str_err.rs  int_to_str_fix.rs  ref2_err.rs  ref2_fix.rs  split_err.rs  split_fix.rs  str_quote_err.rs  str_quote_fix.rs
sample-src/ch1/: caesar_enc.py  caesar_enc.rs  caesar_enc2.py  caesar_enc2.rs  caesar_enc2x.rs  check3.rs  check_range.py  check_range.rs  cmptext.bat  cmptext.sh  coin.py  coin.rs  coin_type.rs  fib.py  fib.rs  fizzbuzz.py  fizzbuzz.rs  hello.rs  if_value.rs  kaimono.rs  kakezan.rs  kuku.csv  kuku.py  kuku.rs  kuku2.py  kuku2.rs  let_error.rs  let_ok.rs  let_test.rs  moon.py  moon.rs  prime100.py  prime100.rs  ref_test.rs  seireki_wareki.rs  show_price.py  show_price.rs  sum1to10.rs  sum1to10array.rs  sum1to10v2.rs  (+4 more)
sample-src/ch2/: bingocard.py  bmi.py  bmi.rs  char_type.rs  cmptext.py  cmptext.rs  counter.py  counter.rs  cur_files.rs  dice.py  findfile.py  findfile.rs  fizzbuzz_file.rs  fizzbuzz_file2.rs  float_type.rs  hashmap_chk.rs  hashmap_err.rs  hashmap_match.rs  hex_oct_bin.rs  input_height.rs  int_type.rs  jisyo.py  jisyo.rs  maze.py  mytree.rs  nums.txt  pow1234_5678.py  pow1234_5678_err.rs  print_args.rs  print_args_vec.rs  range.rs  read_file.rs  rec_fib.rs  rec_sum1to10.rs  str_parse_f.rs  str_parse_i.rs  str_parse_i2.rs  sum_args.py  sum_args.rs  sum_textfile.py  (+3 more)
sample-src/ch2/bingocard_vec/: Cargo.toml
sample-src/ch2/dice/: Cargo.toml
sample-src/ch2/hello/: Cargo.toml
sample-src/ch2/maze/: Cargo.toml
sample-src/ch2/pow1234_5678/: Cargo.toml
sample-src/ch2/pow1234_5678_direct/: Cargo.toml
sample-src/ch2/random_essay/: Cargo.toml  do.txt  gen_essay.py  what.txt  who.txt
sample-src/ch3/: array_get.rs  array_init.rs  array_init2.rs  bmi_struct.py  bmi_struct.rs  buta.rs  globalvars.rs  mutarg.rs  owner_clone.rs  owner_free.rs  owner_free2.rs  owner_func_err.rs  owner_func_mut.rs  owner_func_ref.rs  owner_func_ret.rs  owner_int.rs  owner_lifetime_err.rs  owner_lifetime_fix.rs  owner_simple.c  owner_simple.rs  owner_simple_err.rs  println_err.rs  println_fix.rs  println_fmt.rs  println_name.rs  println_pos.rs  rand_global.rs  rand_xorshift.py  rand_xorshift.rs  rust.rs  shadowing.rs  slice_show.rs  slice_str.rs  slice_sum.rs  str_find.rs  str_find_upper.rs  str_hex.rs  str_index_err.rs  str_index_fix.rs  str_index_fix2.rs  (+16 more)
sample-src/ch3/enc_save_load/: Cargo.toml
sample-src/ch3/mytest/: Cargo.toml
sample-src/ch3/mytest2/: Cargo.toml
sample-src/ch3/mytest_data/: Cargo.toml
sample-src/ch3/mytest_struct/: Cargo.toml
sample-src/ch4/: add_generics.rs  add_generics_where.rs  add_i32.rs  bmi_checker.rs  coin.rs  counter_err.py  counter_fix.rs  iter_array.rs  iter_array_string_err.rs  iter_array_string_fix.rs  iter_fib.rs  iter_prime.rs  iter_range.rs  match_age.rs  match_bmi.rs  match_fizzbuzz.rs  match_fizzbuzz_if.rs  match_num.rs  method_bmi.rs  mod_path.rs  mod_random.rs  mod_rel.rs  rpn.py  rpn.rs  struct_copy_err.rs  struct_copy_fix.rs  struct_generics.rs  struct_method_generics.rs  struct_new.rs  trait_treasurebox.rs  trait_treasurebox_def.rs  vec_i32_char.rs  x2_generics.rs
sample-src/ch4/rand/: Cargo.toml
sample-src/ch4/rpn_calc/: Cargo.toml  README.md
sample-src/ch4/rpn_test/: Cargo.toml
sample-src/ch5/: calc_multi.rs  calc_single.rs  chat_client.rs  chat_server.rs  for_each.rs  mpsctest.rs  plot.py  threadtest.rs
sample-src/ch5/__wav_play_wth_portaudio/: Cargo.toml
sample-src/ch5/fm_synth/: Cargo.toml  check.sh
sample-src/ch5/image_filter/: Cargo.toml
sample-src/ch5/image_ichimatu/: Cargo.toml
sample-src/ch5/image_thumb/: Cargo.toml
sample-src/ch5/mml/: Cargo.toml
sample-src/ch5/noise/: Cargo.toml
sample-src/ch5/pulsewave/: Cargo.toml
sample-src/ch5/sawwave/: Cargo.toml
sample-src/ch5/sine_melody/: Cargo.toml
sample-src/ch5/sinewave/: Cargo.toml
sample-src/ch5/squarewave/: Cargo.toml
sample-src/ch5/trianglewave/: Cargo.toml
sample-src/ch5/web_bmi/: Cargo.toml
sample-src/ch5/web_hello/: Cargo.toml
sample-src/ch5/web_hello_tide/: Cargo.toml
sample-src/ch5/web_input_name/: Cargo.toml
sample-src/ch6/: box_test.rs  cstr_test.rs  list_enum.rs  list_err.rs  list_fix.rs  list_fix2.rs  macro_bmi.rs  macro_echo_num.rs  macro_echo_nums.rs  macro_for.rs  macro_hashmap.rs  macro_html.rs  mycalc.rs  mycalc_test.c  mycalc_test.py  node_err.rs  node_fix.rs  pointer_test.rs  rc_mod_err.rs  rc_mod_fix.rs  rc_test_err.rs  rc_test_fix.rs
src/: ch1.rs  main.rs
src/ch1/: fib.rs  fizz_buzz.rs  fizzbuzz.rs  kuku.rs  kuku2.rs  seireki_wareki.rs
src/ch2/: bingocard.rs  bingocard_vec.rs  bmi.rs  cmptext.rs  counter.rs  findfile.rs  fizzbuzz_file.rs  fizzbuzz_file2.rs  input_height.rs  jisyo.rs  maze.rs  mytree.rs  read_file.rs  rec_fib.rs  sum_args.rs  sum_textfile.rs  tukimei.rs
src/ch3/: enc_save_load.rs  globalvars.rs  lib.rs  str_find.rs  str_hex.rs  str_slice.rs  str_substr.rs  str_substr2.rs
src/ch4/: sec01.rs  sec02.rs  sec03.rs  sec04.rs  sec05.rs
src/ch5/: mml_lib.rs  sec01.rs  sec02.rs  sec03.rs  sec05.rs  sec06.rs
src/ch5/fm_synth_lib/: fm.rs
src/ch6/: peg_tomato.rs  sec01.rs  sec02.rs  sec03.rs  sec04.rs  sec05.rs  sec06.rs  sec07.rs  sec08.rs
src/ch6/cipher_browser/: Cargo.toml  index.html
src/ch6/cipher_browser/src/: cipher_str.rs
src/ch6/wasm_hello/: Cargo.toml  index.html
src/ch6/wasm_hello/src/: lib.rs
src/ch6/wasm_tomato/: Cargo.toml  index.html  server.rs
src/ch6/wasm_tomato/src/: lib.rs  node.rs  parser.rs  runner.rs
(+96 files in other folders)
