[package]
name = "think_with_your_hands_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
rand = "0.8.5"
num-bigint = "0.4.4"

# ch1のプログラム実行用の設定. cargo run --bin <name>で実行できる
[[bin]]
name = "fizzbuzz"
path = "src/ch1/fizzbuzz.rs"
[[bin]]
name = "kuku"
path = "src/ch1/kuku.rs"
[[bin]]
name = "kuku2"
path = "src/ch1/kuku2.rs"
[[bin]]
name = "fib"
path = "src/ch1/fib.rs"
[[bin]]
name = "seireki_wareki"
path = "src/ch1/seireki_wareki.rs"

# ch2
[[bin]]
name = "maze"
path = "src/ch2/maze.rs"
[[bin]]
name = "bingocard"
path = "src/ch2/bingocard.rs"
[[bin]]
name = "bingocard_vec"
path = "src/ch2/bingocard_vec.rs"
[[bin]]
name = "bmi"
path = "src/ch2/bmi.rs"
[[bin]]
name = "input_height"
path = "src/ch2/input_height.rs"