[package]
name = "think_with_your_hands_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
rand = "0.8.5"
num-bigint = "0.4.4"
unicode-segmentation = "1.10.1"
encoding_rs = "0.8.34"
image = "0.25.1"

# ch1のプログラム実行用の設定. cargo run --bin <name>で実行できる
[[bin]]
name = "fizzbuzz"
path = "src/ch1/fizzbuzz.rs"
[[bin]]
name = "kuku"
path = "src/ch1/kuku.rs"
[[bin]]
name = "kuku2"
path = "src/ch1/kuku2.rs"
[[bin]]
name = "fib"
path = "src/ch1/fib.rs"
[[bin]]
name = "seireki_wareki"
path = "src/ch1/seireki_wareki.rs"

# ch2
[[bin]]
name = "maze"
path = "src/ch2/maze.rs"
[[bin]]
name = "bingocard"
path = "src/ch2/bingocard.rs"
[[bin]]
name = "bingocard_vec"
path = "src/ch2/bingocard_vec.rs"
[[bin]]
name = "bmi"
path = "src/ch2/bmi.rs"
[[bin]]
name = "input_height"
path = "src/ch2/input_height.rs"
[[bin]]
name = "counter"
path = "src/ch2/counter.rs"
[[bin]]
name = "tukimei"
path = "src/ch2/tukimei.rs"
[[bin]]
name = "sum_args"
path = "src/ch2/sum_args.rs"
[[bin]]
name = "read_file"
path = "src/ch2/read_file.rs"
[[bin]]
name = "sum_textfile"
path = "src/ch2/sum_textfile.rs"
[[bin]]
name = "cmptext"
path = "src/ch2/cmptext.rs"
[[bin]]
name = "jisyo"
path = "src/ch2/jisyo.rs"
[[bin]]
name = "fizzbuzz_file"
path = "src/ch2/fizzbuzz_file.rs"
[[bin]]
name = "fizzbuzz_file2"
path = "src/ch2/fizzbuzz_file2.rs"
[[bin]]
name = "rec_fib"
path = "src/ch2/rec_fib.rs"
[[bin]]
name = "findfile"
path = "src/ch2/findfile.rs"
[[bin]]
name = "mytree"
path = "src/ch2/mytree.rs"

# ch3
[[bin]]
name = "str_hex"
path = "src/ch3/str_hex.rs"
[[bin]]
name = "str_slice"
path = "src/ch3/str_slice.rs"
[[bin]]
name = "str_substr"
path = "src/ch3/str_substr.rs"
[[bin]]
name = "str_substr2"
path = "src/ch3/str_substr2.rs"
[[bin]]
name = "str_find"
path = "src/ch3/str_find.rs"
[[bin]]
name = "enc_save_load"
path = "src/ch3/enc_save_load.rs"
[[bin]]
name = "globalvars"
path = "src/ch3/globalvars.rs"
[[bin]]
name = "lib"
path = "src/ch3/lib.rs"

# ch4
[[bin]]
name = "ch4_sec01"
path = "src/ch4/sec01.rs"
[[bin]]
name = "ch4_sec02"
path = "src/ch4/sec02.rs"
[[bin]]
name = "ch4_sec03"
path = "src/ch4/sec03.rs"
[[bin]]
name = "ch4_sec04"
path = "src/ch4/sec04.rs"
[[bin]]
name = "ch4_sec05"
path = "src/ch4/sec05.rs"
[[bin]]
name = "ch4_sec06"
path = "src/ch4/sec06.rs"
[[bin]]
name = "ch4_sec07"
path = "src/ch4/sec07.rs"

# ch5
[[bin]]
name = "ch5_sec01"
path = "src/ch5/sec01.rs"