[package]
name = "cipher_browser"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
aes = "0.7.5"
block-modes = "0.8.1"
base64 = "0.22"
sha2 = "0.10"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]

# This is necessary to avoid the following error:
# Error: no prebuilt wasm-opt binaries are available for this platform: Unrecognized target!
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[bin]]
name = "cipher_browser"
path = "server.rs"
