[package]
name = "wasm_hello"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

# This is necessary to avoid the following error:
# Error: no prebuilt wasm-opt binaries are available for this platform: Unrecognized target!
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[bin]]
name = "wasm_hello"
path = "server.rs"